Reworked which resources changed from an event. Reworked chracter actions api. Refactored game controls.
